# krunner-idnconverter

./: CMakeLists.txt  LICENSE  README.md  build.sh  idnconverter.cpp  idnconverter.h  idnconverterrunner.cpp  idnconverterrunner.h  install.sh  krunner-idnconverter.kdev4  plasma-runner-idnconverter.desktop
